--- a/src/__menu.pug
+++ b/src/__menu.pug
@@ -113,6 +113,311 @@ mixin leftMenu
         .lev_a_wrapper
           a(href="") Brow Bar
 
+
+
+mixin leftMenuSuperTree
+  nav.leftMenu__outer.leftMenu__outerHideInMobile 
+    ul.leftMenu
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Решить проблему
+          .openInner
+        ul
+          li.lev2
+            .lev_a_wrapper
+              a.hasInner(href="") Лифтинг
+          li.lev2
+            .lev_a_wrapper
+              a.hasInner(href="") Пигментация
+          li.lev2
+            .lev_a_wrapper
+              a.hasInner(href="") Акне
+          li.lev2
+            .lev_a_wrapper
+              a.hasInner(href="") Лишний вес
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Услуги
+          .openInner
+        ul
+          li.lev2
+            .lev_a_wrapper
+              a.hasInner(href="") Аппаратная косметология 
+              .openInner
+            ul
+              li.lev3
+                a(href="") фотоомоложение
+              li.lev3
+                a(href="") лазерная косметология
+              li.lev3
+                a(href="") список всех процедур
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Инъекционная косметология
+              .openInner
+            ul
+              li.lev3
+                a(href="") Список всех методик
+          li.lev2
+            .lev_a_wrapper
+              a.hasInner(href="") Лечебная косметология 
+              .openInner
+            ul
+              li.lev3
+                a(href="") фототерапия в дерматологии
+              li.lev3
+                a(href="") лазеротерапия в дерматологии
+              li.lev3
+                a(href="") подология
+              li.lev3
+                a(href="") трихология
+              li.lev3
+                a(href="") лечение храпа
+              li.lev3
+                a(href="") список всех процедур
+          li.lev2
+            .lev_a_wrapper
+              a.hasInner(href="") Эстетика и уход
+              .openInner
+            ul
+              li.lev3
+                a(href="") список всех процедур
+          li.lev2
+            .lev_a_wrapper
+              a.hasInner(href="") Имиджевая студия
+              .openInner
+            ul
+              li.lev3
+                a(href="") визаж
+              li.lev3
+                a(href="") стрижка
+              li.lev3
+                a(href="") окрашивание
+              li.lev3
+                a(href="") уход за волосами
+              li.lev3
+                a(href="") укладка
+              li.lev3
+                a(href="") лечение волос (трихология)
+              li.lev3
+                a(href="") brow bar
+              li.lev3
+                a(href="") маникюр
+              li.lev3
+                a(href="") педикюр
+              li.lev3
+                a(href="") лечение стопы и ногтевой пластины (подология)
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Специалисты
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Оборудование
+          .openInner
+        ul
+          li.lev2
+            .lev_a_wrapper
+              a(href="") LPG
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Candela
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Fotona
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Бренды
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") О нас
+          .openInner
+        ul
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Контакты
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Дополнительная информация
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Вакансии
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Блог
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Лицензии
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Акции
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Запись на прием
+
+mixin MenuBottom1__menu
+  nav.leftMenu__outer100 
+    ul.leftMenu
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Специалисты
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Оборудование
+          .openInner
+        ul
+          li.lev2
+            .lev_a_wrapper
+              a(href="") LPG
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Candela
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Fotona
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Бренды
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") О нас
+          .openInner
+        ul
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Контакты
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Дополнительная информация
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Вакансии
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Блог
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Лицензии
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Акции
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Запись на прием
+
+
+
+mixin MenuBottom1__serv
+  nav.leftMenu__outer100 
+    ul.leftMenu
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Аппаратная косметология 
+          .openInner
+        ul
+          li.lev2
+            .lev_a_wrapper
+              a(href="") фотоомоложение
+          li.lev2
+            .lev_a_wrapper
+              a(href="") лазерная косметология
+          li.lev2
+            .lev_a_wrapper
+              a(href="") список всех процедур
+      li.lev1
+        .lev_a_wrapper
+          a(href="") Инъекционная косметология
+          .openInner
+        ul
+          li.lev2
+            .lev_a_wrapper
+              a(href="") Список всех методик
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Лечебная косметология 
+          .openInner
+        ul
+          li.lev2
+            .lev_a_wrapper
+              a(href="") фототерапия в дерматологии
+          li.lev2
+            .lev_a_wrapper
+              a(href="") лазеротерапия в дерматологии
+          li.lev2
+            .lev_a_wrapper
+              a(href="") подология
+          li.lev2
+            .lev_a_wrapper
+              a(href="") трихология
+          li.lev2
+            .lev_a_wrapper
+              a(href="") лечение храпа
+          li.lev2
+            .lev_a_wrapper
+              a(href="") список всех процедур
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Эстетика и уход
+          .openInner
+        ul
+          li.lev2
+            .lev_a_wrapper
+              a(href="") список всех процедур
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Имиджевая студия
+          .openInner
+        ul
+          li.lev2
+            .lev_a_wrapper
+              a(href="") визаж
+          li.lev2
+            .lev_a_wrapper
+              a(href="") стрижка
+          li.lev2
+            .lev_a_wrapper
+              a(href="") окрашивание
+          li.lev2
+            .lev_a_wrapper
+              a(href="") уход за волосами
+          li.lev2
+            .lev_a_wrapper
+              a(href="") укладка
+          li.lev2
+            .lev_a_wrapper
+              a(href="") лечение волос (трихология)
+          li.lev2
+            .lev_a_wrapper
+              a(href="") brow bar
+          li.lev2
+            .lev_a_wrapper
+              a(href="") маникюр
+          li.lev2
+            .lev_a_wrapper
+              a(href="") педикюр
+          li.lev2
+            .lev_a_wrapper
+              a(href="") лечение стопы и ногтевой пластины (подология)
+      
+mixin MenuBottom1__probl
+  nav.leftMenu__outer100 
+    ul.leftMenu
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Лифтинг
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Пигментация
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Акне
+      li.lev1
+        .lev_a_wrapper
+          a.hasInner(href="") Лишний вес
+      
+
+
+
+
 mixin leftMenuAdaptive
   ul.leftMenu
     li.lev1
