--- a/src/__services.pug
+++ b/src/__services.pug
@@ -4,9 +4,9 @@ mixin services
   .serv__area.w0
     .serv__outer.w1
       .title1
-        h1 Процедуры нашего центра
+        h1 Заголовок страницы
       .serv__wrapper
-        +leftMenu
+        +leftMenuSuperTree
         .servBox__outer
           .serv
             .serv__itemOuter
