--- a/src/assets/css/__header2.css
+++ b/src/assets/css/__header2.css
@@ -3,6 +3,8 @@
   /* background: #272E36; */
   background: linear-gradient(#272e36, #676c70);
   /* background: var(--tc0_light); */
+  /* background: #6a6e79; */
+  /* background: linear-gradient(#6a6e79, #787d8a); */
 }
 
 .topLine2 {
