--- a/src/assets/css/__mainTop2.css
+++ b/src/assets/css/__mainTop2.css
@@ -82,6 +82,10 @@
   color: #fff;
 }
 
+.colorBox_e {
+  background: var(--x1greySuperLight);
+}
+
 .mainTop__menuItemWrapper {
   position: absolute;
   top: 10px;
@@ -212,6 +216,10 @@
   font-size: 1.5rem;
 }
 
+.mainTop__hideBoxClose {
+  cursor: pointer;
+}
+
 .mainTop__hideBoxClose i {
   font-size: 1.5rem;
 }
@@ -222,10 +230,12 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  padding: 0 5px 0 0;
 }
 
 .mainTop__hideBoxInnerContentInner {
   position: relative;
+  width: 100%;
 }
 
 .topMenuBox {
