--- a/src/assets/css/__menu-05-02-2021.css
+++ b/src/assets/css/__menu-05-02-2021.css
@@ -341,16 +341,11 @@ li.endLeftBlock {
   width: 20%;
 }
 
-.leftMenu__outer100 {
-  width: 100%;
-}
-
 .leftMenu {
   display: flex;
   flex-direction: column;
   margin-top: 0.6125rem;
   border-top: 1px solid var(--bg2);
-  width: 100%;
 }
 
 .leftMenu li.lev1 {
@@ -366,7 +361,7 @@ li.endLeftBlock {
   padding: 0.625rem 2.25rem 0.625rem 0.625rem;
   text-decoration: none;
   width: 100%;
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 1.3;
   font-weight: 500;
   color: var(--tc0);
@@ -453,14 +448,14 @@ li.endLeftBlock {
 
 .leftMenu li.lev2 > .lev_a_wrapper a {
   display: block;
-  padding: 0.625rem 2.25rem 0.625rem 1.25rem;
+  padding: 0.625rem 2.25rem 0.625rem 0.625rem;
   text-decoration: none;
   width: 100%;
   font-size: 1rem;
   line-height: 1.3;
+  font-weight: 500;
   color: var(--tc0);
-  background: #ececec;
-  /* background: var(--bg0); */
+  background: var(--x1greySuperLight);
   border-bottom: 1px solid var(--bg2);
   transition: all 0.3s;
   position: relative;
@@ -537,13 +532,13 @@ li.endLeftBlock {
 .openInner {
 }
 
-.leftMenu li.lev3 {
+.leftMenu li.lev2 {
   list-style: none;
 }
 
-.leftMenu li.lev3 > a {
+.leftMenu li.lev2 > a {
   display: block;
-  padding: 0.625rem 0.625rem 0.625rem 2.5rem;
+  padding: 0.625rem 0.625rem 0.625rem 1.5rem;
   text-decoration: none;
   width: 100%;
   font-size: 0.875rem;
@@ -555,28 +550,28 @@ li.endLeftBlock {
   position: relative;
 }
 
-.leftMenu li.lev3.active > a {
+.leftMenu li.lev2.active > a {
   background: rgba(255, 128, 0, 0.5);
 }
 
-.leftMenu li.lev3 > a:before {
+.leftMenu li.lev2 > a:before {
   content: "";
   position: absolute;
   width: 6px;
   height: 6px;
   border-radius: 50%;
   background: var(--tc0);
-  left: 1.5rem;
+  left: 0.625rem;
   top: 50%;
   margin-top: -3px;
   z-index: 10;
 }
 
-.leftMenu li.lev3 > a:hover {
+.leftMenu li.lev2 > a:hover {
   background: #ececec;
 }
 
-.leftMenu li.lev3.active > a:hover {
+.leftMenu li.lev2.active > a:hover {
   background: rgba(255, 128, 0, 0.8);
 }
 
