--- a/src/assets/css/__menuBottom1_media.css
+++ b/src/assets/css/__menuBottom1_media.css
@@ -28,6 +28,12 @@
   .menuBottom1__area_active {
     bottom: 0;
   }
+  .menuBottom1__item {
+    padding: 10px 5px 20px;
+  }
+  .menuBottom1__area_page {
+    display: block;
+  }
 }
 
 @media only screen and (max-width: 600px) {
