--- a/src/__header2.pug
+++ b/src/__header2.pug
@@ -10,6 +10,9 @@ mixin header2
         a.topLine2__sLinkItem(href="")
           i.icon-youtube
           span Наш youtube-канал
+        a.topLine2__sLinkItem.topSearch_JS(href="")
+          i.icon-search2
+          span Поиск по сайту
   .header2__area.w0
     header.header2.w1
       .header2__logo
