--- a/src/assets/css/__menuBottom1.css
+++ b/src/assets/css/__menuBottom1.css
@@ -8,6 +8,10 @@
   transition: all 0.5s;
 }
 
+.menuBottom1__areaFake {
+  display: none;
+}
+
 .menuBottom1__area_page {
   top: auto;
   bottom: 0;
