--- a/src/__const.pug
+++ b/src/__const.pug
@@ -38,24 +38,25 @@ mixin toUp
     i.icon-up1
 
 mixin search1
+  .search1__overlay
   .search1__area
     .search1__wrapper
       .search1__close
-        i.icon-close1
+        i.icon-close2021
       .search1__outer
         .search1__box
           form.search1(action='#', method='get')
             input.search1__input(type='text', name='', value='', placeholder='Поиск по сайту...')
             button.search1__btn(type='submit')
-              i.icon-search1
+              i.icon-search2
 
 mixin search2
   .search1__wrapper
     .search1__close
-      i.icon-close1
+      i.icon-close2021
     .search1__outer
       .search1__box
         form.search1(action='#', method='get')
           input.search1__input(type='text', name='', value='', placeholder='Поиск по сайту...')
           button.search1__btn(type='submit')
-            i.icon-search1
+            i.icon-search2
