--- a/src/assets/css/__footer.css
+++ b/src/assets/css/__footer.css
@@ -1,5 +1,9 @@
 .footer__area {
-  background: var(--x1greySuperLight);
+  /* background: var(--x1greySuperLight); */
+  background: #a49693;
+  background: linear-gradient(#676c70, #272e36);
+  background: #aba299;
+  /* background: #c24b35; */
   padding: 70px 0;
   /* margin-top: 20px; */
 }
