--- a/src/assets/css/__header2_media.css
+++ b/src/assets/css/__header2_media.css
@@ -20,9 +20,6 @@
 }
 
 @media only screen and (max-width: 820px) {
-}
-
-@media only screen and (max-width: 768px) {
   .topLine2 {
     padding: 5px 0;
   }
@@ -34,6 +31,12 @@
   }
   .topLine2__sLinkItem span {
     display: none;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .topLine2__sLinkItem {
+    margin: 0 0 0 10px;
   }
 }
 
@@ -50,7 +53,9 @@
   .header2 {
     padding: 10px 0 0;
   }
-  .header2__contactsItemLink_mb {
+  .header2__contactsItemLink_mb,
+  .header2__contactsItemLink_mb:hover,
+  .header2__contactsItemLink_mb:focus {
     font-size: 3rem;
   }
 }
