--- a/src/__mainTop.pug
+++ b/src/__mainTop.pug
@@ -7,17 +7,17 @@ mixin mainTop
         .mainTop__left
           .mainTop__promo
             video(width="100%" height="auto" muted="" playsinline="" autoplay="" loop="" preload="auto")
-              source(src='assets/video/video1.mp4' type='video/mp4')
+              source(src='assets/video/video3.mp4' type='video/mp4')
         .mainTop__right
           //- +hideBox
           .mainTop__menu
             .mainTop__menuItemOuter.mainTop__menuItemOuter_a
               .mainTop__menuItemWrapper
-                a.mainTop__menuItem.mainTop__menuItem_js.colorBox_a(href="#", data-id="menu1")
+                a.mainTop__menuItem.mainTop__menuItem_js.colorBox_a(href="#", data-id="menu3")
                   .mainTop__menuItemTop
-                    .mainTop__menuItemTitle Меню
-                    i.icon-menu
-                  .mainTop__menuItemBottom Информация о нашем Центре
+                    .mainTop__menuItemTitle Решить проблему
+                    i.icon-question-round
+                  .mainTop__menuItemBottom Современное решение косметологических проблем
             .mainTop__menuItemOuter.mainTop__menuItemOuter_b
               .mainTop__menuItemWrapper
                 a.mainTop__menuItem.mainTop__menuItem_js.colorBox_b(href="#", data-id="menu2")
