--- a/src/__header2.pug
+++ b/src/__header2.pug
@@ -34,6 +34,8 @@ mixin header2
           a.header2__contactsItemLink_mb(href="tel:+78452650500")
             i.icon-phone-call-12
       //- .header2__btn Записаться на прием
+      .header2__menuBtn.header2__menuBtn_js(data-id="menu1")
+        i.icon-menu
           
 
         
