--- a/src/assets/css/__header2.css
+++ b/src/assets/css/__header2.css
@@ -92,6 +92,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin: 0 30px 0 auto;
 }
 
 .header2__contactsItem {
@@ -131,10 +132,16 @@
   display: none;
 }
 
+.header2__contactsItemLink_mb {
+}
+
 .header2__contactsItemLink_mb,
 .header2__contactsItemLink_mb:hover,
 .header2__contactsItemLink_mb:focus {
   text-decoration: none;
+}
+
+.header2__contactsItemLink_mb i {
   color: var(--tc0);
   font-size: 4rem;
 }
@@ -156,4 +163,13 @@
   box-shadow: -1px 1px 14px -1px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: -1px 1px 14px -1px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 1px 14px -1px rgba(0, 0, 0, 0.75);
+}
+
+.header2__menuBtn {
+  position: relative;
+}
+
+.header2__menuBtn i {
+  font-size: 4rem;
+  color: var(--tc0);
 }
